--- a/day-3/templates/macros.html
+++ b/day-3/templates/macros.html
@@ -1,6 +1,6 @@
 {% macro personalMessage(humanFirst) %}
   A game where 
-  {% if game.humanFirst == true %}
+  {% if humanFirst %}
     you
   {% else %}
     the computer
