Render a playable game

--- a/day-3/templates/game.html
+++ b/day-3/templates/game.html
@@ -1,5 +1,24 @@
 {% extends "parentTemplate.html" %}
 
 {% block mainContent %}
-  <h1>Game {{ index }}</h1>
+  <h1>Game {{ gameIndex }}</h1>
+  <div class="board">
+    {% for space in range(9) %}
+      <div class="space">
+        <div class="space-contents">
+          {% if game.board.state[space] === 1 %}
+            X
+          {% elif game.board.state[space] === 2 %}
+            O
+          {% else %}
+            <form method="POST" action="/{{ gameIndex }}">
+              <button class="play-move" data-space="{{space}}" data-row="{{ space // 3 }}" data-column="{{ space % 3 }}"></button>
+              <input type="hidden" name="row" value="{{ space // 3 }}" />
+              <input type="hidden" name="col" value="{{ space % 3 }}" />
+            </form>
+          {% endif %}
+        </div>
+      </div>
+    {% endfor %}
+  </div>
 {% endblock %}
