Add a way to delete games from list

--- a/day-3/templates/game.html
+++ b/day-3/templates/game.html
@@ -1,3 +1,14 @@
+<!-- assignment:
+  1. Create a new game
+* 2. Delete existing game
+      add to form:
+      <input type="hidden" name="X-HTTP-METHOD" value="Delete" />
+
+      then write middleware:
+      delete the value 
+  3. Save game(s) when things change
+-->
+
 {% extends "parentTemplate.html" %}
 
 {% block mainContent %}
@@ -34,4 +45,8 @@
     {% endfor %}
   </div>
 
+  <form method="POST" action="/{{ gameIndex }}">
+    <button class="delete-game">DELETE THIS GAME</button>
+    <input type="hidden" name="X-HTTP-METHOD" value="Delete" />
+  </form>
 {% endblock %}
