Actually delete games!

--- a/day-3/templates/index.html
+++ b/day-3/templates/index.html
@@ -17,4 +17,11 @@
       <li>{{ myMacros.personalMessage(game.humanFirst) }}</li>
     {% endfor %}
   </ul>
+
+<!--   <div>
+    <form method="POST" action="/new">
+      <button class="create-game">Create a new game</button>
+    </form>
+  </div>
+ -->
 {% endblock %}
