--- a/day-3/templates/game.html
+++ b/day-3/templates/game.html
@@ -1,7 +1,7 @@
 <!-- assignment:
   1. Create a new game
 * 2. Delete existing game
-  3. Save game(s) when things change
+* 3. Save game(s) when things change
 -->
 
 {% extends "parentTemplate.html" %}
